@@ -27,6 +27,9 @@
 * Gravatar is configurable.
 * #103: Drafts are saved on force close or quit by default.
 * C-v: duplicate and refine query.
+* Mark thread moves to next by default.
+* ti: set cursor to first thread if we are at first thread when new
+  addition is made.
 
 == v0.5 / 2016-02-06
 
